# ros-path-planning

./: .gitignore  Algorithm test runs.xlsx  CITATION.cff  CMakeLists.txt  README.md  package.xml  readme.md
launch/: scenario0.launch.py  scenario1.launch.py  scenario2.launch.py  scenario3.launch.py  scenario4.launch.py  scenario5.launch.py  tb3_house_launch_initial_pose.launch.py  tb3_maze_launch.launch.py  tb3_sim_launch_initial_pose.launch.py  tb3_sim_launch_with_gazebo.launch.py
maps/: house_world.pgm  house_world.yaml  house_worldOLD.pgm  maze.pgm  maze.yaml  maze_3.yaml  maze_v2.pgm  maze_v2.yaml
params/: nav2_params_initial.yaml  nav2_params_initial_1.yaml  waypoint_params.yaml
rviz/: nav2_config.rviz
scripts/: distance.py  distance2.py  moving.py  moving2.py  moving3.py  moving4.py  moving5.py  object_spawner.py  object_spawner2.py  object_spawner3.py  object_spawner4.py  object_spawner_BU1.py  scenario1_objects.py  scenario2_objects.py  scenario3_objects.py  scenario4_objects.py  scenario5_objects.py  waypoint_follower.py
worlds/: maze.world  maze2.world  maze3.world  maze_3_6x6.world  my_world.sdf  smalltown.world  smalltown_2.world  turtlebot3_house.world
worlds/models/maze_3_6x6/: model.sdf
worlds/models/maze_3_6x6_v2/: model.config  model.sdf
